    when a grammar rule contained a meta-variable, which the Logtalk
    compiler should (but currently don't) report as illegal (the call/1
    control construct should be used instead on this case). Thanks to
    Nicolas Pelletier for the bug report.

    Added a partial implementation of the ISO Prolog predicate_property/2
    predicate to the ECLiPSe config file.

    Applied a bug fix to the "flags" contribution made available by its
    author, Theofrastos Mantadelis. Workaround a compatibility issue with
    GNU Prolog.

    Extended the "delegates" example with a sample implementation of a
    delegator using a parametric object.

    Extended the "dynpred" example in order to illustrate how to define
    category predicates that handle dynamic predicates in the context of
    "this" and in the context of "self".

    Added a wall_time/1 predicate to the "cc" example.

    Updated the syntax highlighting test files, adding missing true/0 and
    fail/0 control constructs.


2.42.2 - January 25, 2011

    Updated the Logtalk compiler in order to allow checking for module
    predicate properties without requiring importing the predicates into
    "user" (note, however, that the module must still be loaded prior to
    the compilation of source files calling the module predicates).

    Updated the Logtalk compiler in order to check compile-time instantiated
    closure arguments on call/2-N goals for common programming errors.

    Updated the Logtalk compiler in order to generate warnings for lambda
    expressions with variables that are not declared as either free variables
    or lambda parameters or with variables that are declared as both free
    variables and lambda parameters. Thanks to Jan Burse for suggesting
    these sanity checks.

    Updated the Logtalk runtime in order to support using the <</2 control
    construct in closure meta-arguments of meta-predicates.

    Added support for compiling Free/Goal lambda expression calls (by